# TemplateProject

./: Qt_cmake_build_deploy_RPI64.sh  Qt_cmake_build_deploy_linux64.sh  Qt_cmake_build_deploy_win64.bat  ReadMe.txt
Source/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
release/linux64/: Hello_World  TCP_Client  TCP_Client_GUI  TCP_Server  TCP_Server_GUI
release/rpi64/: Hello_World  TCP_Client  TCP_Client_GUI  TCP_Server  TCP_Server_GUI  libsystemd.so.0  libudev.so.1
source/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  tcpclientsocket.cpp  tcpclientsocket.h
